[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/EndGameUI.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://shaders/fade_to_grayscale.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/fade_amount = 0.5
shader_param/alpha_amount = 1.0
shader_param/mix_color = Vector3( 34, 32, 54 )

[node name="EndGameUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundSprite" type="Sprite" parent="CanvasLayer" groups=["in_game_ui"]]
material = SubResource( 2 )
texture = ExtResource( 2 )
centered = false

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -74.0
margin_right = 89.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
margin_right = 178.0
margin_bottom = 148.0

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_right = 178.0
margin_bottom = 13.0
text = "END_GAME_WIN"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsList" type="GridContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 178.0
margin_bottom = 98.0
columns = 2

[node name="TimeLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
margin_right = 168.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "UI_TIME"
valign = 1

[node name="TimeValue" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
margin_left = 172.0
margin_right = 178.0
margin_bottom = 13.0
text = "_"
align = 2
valign = 1

[node name="AnnoyanceLowLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
visible = false
margin_top = 17.0
margin_right = 160.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "UI_ANNOYANCE_LOW"
valign = 1

[node name="AnnoyanceLowValue" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
visible = false
margin_top = 17.0
margin_right = 40.0
margin_bottom = 30.0
text = "_"
align = 2
valign = 1

[node name="AnnoyanceHighLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
margin_top = 17.0
margin_right = 168.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "UI_ANNOYANCE_HIGH"
valign = 1

[node name="AnnoyanceHighValue" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
margin_left = 172.0
margin_top = 17.0
margin_right = 178.0
margin_bottom = 30.0
text = "_"
align = 2
valign = 1

[node name="RoomsEnteredLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
margin_top = 34.0
margin_right = 168.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "UI_ROOMS_ENTERED"
valign = 1

[node name="RoomsEnteredValue" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
margin_left = 172.0
margin_top = 34.0
margin_right = 178.0
margin_bottom = 47.0
text = "_"
align = 2
valign = 1

[node name="PlayerInteractionsLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
margin_top = 51.0
margin_right = 168.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "UI_PLAYER_INTERACTIONS"
valign = 1

[node name="PlayerInteractionsValue" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
margin_left = 172.0
margin_top = 51.0
margin_right = 178.0
margin_bottom = 64.0
text = "_"
align = 2
valign = 1

[node name="MomInteractionsLabel" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
margin_top = 68.0
margin_right = 168.0
margin_bottom = 81.0
size_flags_horizontal = 3
text = "UI_MOM_INTERACTIONS"
valign = 1

[node name="MomInteractionsValue" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/StatsList"]
margin_left = 172.0
margin_top = 68.0
margin_right = 178.0
margin_bottom = 81.0
text = "_"
align = 2
valign = 1

[node name="RetryButton" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 178.0
margin_bottom = 123.0
text = "UI_RETRY"

[node name="QuitButton" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 178.0
margin_bottom = 148.0
text = "UI_QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
